# deepwork

./: .gitignore  BUILD.bazel  LICENSE.md  Readme.md  WORKSPACE  applescriptHandler.go  default-config.json  donotdisturbHandler.go  example-config.json  go.mod  main.go  main_test.go
.circleci/: config.yml
handlers/: applescriptHandler.go  donotdisturbHandler.go
