load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/simontheleg/deepwork",
)

go_library(
    name = "go_default_library",
    srcs = [
        "applescriptHandler.go",
        "donotdisturbHandler.go",
        "main.go",
    ],
    importpath = "github.com/simontheleg/deepwork",
    visibility = ["//visibility:private"],
    deps = ["@com_github_mitchellh_go_homedir//:go_default_library"],
)

go_binary(
    name = "deepwork",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_mitchellh_go_homedir//:go_default_library"],
)
